--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,12 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+	
+	<repositories>
+		<repository>
+			<id>ewerp.com</id>
+			<url>http://www.ewerp.com/maven</url>
+		</repository>
+	</repositories>
 
 </project>
